--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/app.css -o ./build/app.css --watch",
+    "dev": "npx tailwindcss -i ./src/app.css -o ./public/app.css --watch",
     "prod": "NODE_ENV=production npx tailwindcss -i ./src/app.css -o ./public/app.css --minify"
   },
   "devDependencies": {
