--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "npx tailwindcss -i ./src/app.css -o ./public/app.css --watch",
-    "prod": "NODE_ENV=production npx tailwindcss -i ./src/app.css -o ./public/app.css --minify"
+    "build": "NODE_ENV=production npx tailwindcss -i ./src/app.css -o ./public/app.css --minify"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
