--- a/package.json
+++ b/package.json
@@ -1,11 +1,44 @@
 {
-  "private": true,
+  "name": "@eeggfoundation/manifesto.eegg.foundation",
+  "private": false,
+  "license": "MIT",
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/app.css -o ./public/app.css --watch",
-    "build": "NODE_ENV=production npx tailwindcss -i ./src/app.css -o ./public/app.css --minify"
+      "dev": "vite",
+      "build": "tsc && vite build",
+      "preview": "vite preview"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "tailwindcss": "^3.1.4"
+      "@headlessui/react": "^1.6.6",
+      "@heroicons/react": "^1.0.6",
+      "@tailwindcss/typography": "^0.5.2",
+      "@types/react": "^18.0.17",
+      "@types/react-dom": "^18.0.6",
+      "@vitejs/plugin-react": "^2.0.1",
+      "autoprefixer": "^10.4.8",
+      "html-react-parser": "^3.0.3",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-router-dom": "^6.3.0",
+      "tailwindcss": "^3.1.4",
+      "typescript": "^4.7.4",
+      "vite": "^3.0.9"
+  },
+  "eslintConfig": {
+      "extends": [
+          "react-app",
+          "react-app/jest"
+      ]
+  },
+  "browserslist": {
+      "production": [
+          ">0.2%",
+          "not dead",
+          "not op_mini all"
+      ],
+      "development": [
+          "last 1 chrome version",
+          "last 1 firefox version",
+          "last 1 safari version"
+      ]
   }
 }
